--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,13 @@
+:root {
+  --finn: #643a71;
+  --amethyst: #8b5fbf;
+  --french_mauve: #d183c9;
+  --rose_pompadour: #e3879e;
+  --pink: #fec0ce;
+  --white: rgba(255, 255, 255, 0.8);
+  --night: #0d160b;
+}
+
 * {
   margin: 0px;
   padding: 0px;
@@ -8,6 +18,6 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color: #27282c;
-  color: rgba(255, 255, 255, 0.5);
+  background-color: var(--rose_pompadour);
+  color: var(--white);
 }
