--- a/app/globals.css
+++ b/app/globals.css
@@ -18,3 +18,11 @@ body {
   flex-direction: column;
   min-height: 100vh;
 }
+
+.animenu {
+  @apply transition ease-in-out hover:-translate-y-1 hover:scale-110 duration-300;
+}
+
+.anibutton {
+  @apply transition ease-in-out hover:bg-finn duration-300;
+}
